--- a/src/style.css
+++ b/src/style.css
@@ -66,7 +66,12 @@
   border-radius: 11px;
   margin: 0;
 }
-
+.flex-vertical{
+  flex-direction: column;
+}
+.flex-vertical .stat-card{
+  flex-basis: unset;
+}
 @media (max-width: 600px) {
   .yAxis text, .xAxis text{
     font-size: 9px;
