--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,15 @@
   flex-basis: 40%;
   flex-grow: 1;
 }
+
+.tooltipCircle{
+  border-radius: 100px;
+  height: 8px; 
+  width: 8px; 
+  display: inline-flex; 
+  margin-right: 8px;
+}
+
 .flex-half-screen{
   display: flex;
   flex-direction: column;
@@ -153,5 +162,6 @@ p.source{
   }
 }
 .not-available{
-  font-size: 2rem;
+  font-size: 1rem;
+  color: var(--gray-500);
 }
